# hoycutils

./: .gitignore  README.md
hoycutils/: Makefile.am  README  android_build.sh  android_x86_build.sh  build.sh  configure.ac  linux_build.sh  main.c  run_sample.sh
hoycutils/client/: Makefile.am  client.c  client.h
hoycutils/common/: Makefile.am  bitmap.c  bsearch.c  cmds.c  commands.c  common.c  completion.c  configs.c  console.c  data_frag.c  deamon.c  dump_stack.c  ethtools.c  fifo.c  find_bit.c  hbeat.c  hweight.c  idr.c  init.c  ioasync.c  iowait.c  log.c  mempool.c  netsock.c  notifier.c  pack_head.c  packet.c  parcel.c  parser.c  parser.h  poller.c  queue.c  rbtree.c  sock_dgram.c  sock_stream.c  sockets.c  timer.c  utils.c  wait.c  workqueue.c
hoycutils/configs/: Makefile.am  configs.conf  test.conf
hoycutils/docs/: Makefile.am
hoycutils/include/: Makefile.am  protos.h
hoycutils/include/common/: Makefile.am  bitmap.h  bitops.h  bsearch.h  bug.h  cmds.h  common.h  compiler-gcc.h  compiler.h  completion.h  configs.h  console.h  core.h  data_frag.h  deamon.h  ethtools.h  fake_atomic.h  fifo.h  find_bit.h  hash.h  hbeat.h  hweight.h  idr.h  init.h  ioasync.h  iowait.h  list.h  log.h  mempool.h  netsock.h  non-atomic.h  notifier.h  pack_head.h  packet.h  parcel.h  poller.h  queue.h  rbtree.h  sizes.h  sockets.h  (+6 more)
hoycutils/m4/: serv.m4
hoycutils/mgr_serv/: Makefile.am  mgr_serv.c
hoycutils/samples/: Makefile  Makefile.am  client_sample_netplay.c  client_sample_rooms.c  include  lib  readme.txt
hoycutils/samples/android_samples/jni/: Android.mk  Application.mk  client_sample_netplay.c  client_sample_rooms.c  include  lib
hoycutils/serv/: Makefile.am  center_serv.c  cli_mgr.c  cli_mgr.h  main.c  node_mgr.c  node_mgr.h  node_serv.c  protos_internal.h  serv.h  task.h  task_protos.c  turn.c  turn.h
hoycutils/tests/: Makefile.am
hoycutils/tests/test_case/: Makefile.am  main.c  test_case.h  test_common.c
hoycutils/work_serv/: Makefile.am  work_serv.c
